test/link/invalid-patches.out
error: JR target must be between -128 and 127 bytes away, not 190; use JP instead
    at invalid-patches.asm(10)
error: Address $0 for LDH is not in HRAM range; use LD instead
    at invalid-patches.asm(9)
error: Requested SIZEOF() of undefined section "NonexistentSection"
    at invalid-patches.asm(8)
error: Requested STARTOF() of undefined section "NonexistentSection"
    at invalid-patches.asm(7)
error: Requested BANK() of undefined section "NonexistentSection"
    at invalid-patches.asm(6)
error: Requested BANK() of undefined symbol "NonexistentSymbol"
    at invalid-patches.asm(5)
error: Exponent by negative value -1
    at invalid-patches.asm(4)
error: Modulo by 0
    at invalid-patches.asm(3)
Linking failed with 8 errors
